refatoração no toString da classe Album